[gd_scene load_steps=8 format=3 uid="uid://bxcn8flp64gha"]

[ext_resource type="Texture2D" uid="uid://clx3jlkx845lq" path="res://assets/moth.png" id="1_0cqwt"]
[ext_resource type="Script" uid="uid://qiyn8j2mtexr" path="res://scripts/enemy.gd" id="1_o7qfg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_o7qfg"]
atlas = ExtResource("1_0cqwt")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2g3de"]
atlas = ExtResource("1_0cqwt")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_mue2v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7qfg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2g3de")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xi5yy"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o7qfg"]
size = Vector2(30, 29)

[node name="Moth" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_o7qfg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_mue2v")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_xi5yy")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_o7qfg")

[node name="HealthBar" type="TextureProgressBar" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
